Replace "upload" box on Stuff pages with a nicer looking shop / create box with updated text.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -88,66 +88,54 @@ catIntro15 = Not used.
 #
 # Item tips
 
-itemUploadTitle1 = Upload your Images!
-itemUploadPitch1a = - Create <a href="#people-galleries_@MEMBER_ID@">photo galleries!</a>
-itemUploadPitch1b = - Upload a picture for <a href="#people-@MEMBER_ID@">your Profile</a>
-itemUploadPitch1c = - Use them to \
-  <a href="http://wiki.whirled.com/Edit_Your_Room">decorate your room</a>
+getStuffBuy1 = Buy an image in the shop and use it on your <a href="#people-me">Profile</a> or \
+  to <a href="http://wiki.whirled.com/Edit_Your_Room">decorate a room</a>.
+getStuffCreate1 = Create a <a href="#people-create">gallery</a> to show off your photos and \
+  artwork to the world.
+  
+getStuffBuy3 = Buy furniture and use it to \
+  <a href="http://wiki.whirled.com/Edit_Your_Room">decorate a clubhouse</a> for you and your \
+  friends.
+getStuffCreate3 = Check out the <a href="http://wiki.whirled.com/Create_Furniture">furniture \
+  tutorial</a> and learn how to make your own.
 
-itemUploadTitle2 = Upload your Stories!
-itemUploadPitch2a = - Do it for <a href="#world">the kids</a>!
-itemUploadPitch2b = - Do it for <a href="#swiftly">love of country</a>!
-itemUploadPitch2c = - Do it for <a href="#profile">the Gipper</a>!
-
-itemUploadTitle3 = Create your own Furniture!
-itemUploadPitch3a = - Learn how to <a href="http://wiki.whirled.com/Edit_Your_Room">decorate \
-  your room</a>
-itemUploadPitch3b = - Upload cool Furniture and <a href="#mail">mail it as a gift</a> to your friends
-itemUploadPitch3c = - Check out the <a href="http://wiki.whirled.com/Create_Furniture">Furniture \
-  making tutorial</a>
-
-itemUploadTitle4 = Create your own Game!
-itemUploadPitch4a = - Check out the <a href="http://wiki.whirled.com/Create_Games">Game \
-  making tutorials</a>
-itemUploadPitch4b = - View and modify our \
+getStuffBuy4 = Buy a game and <a href="http://wiki.whirled.com/Edit_Your_Room">put it in your \
+  room</a> for all your visitors to play.
+getStuffCreate4 = Check out the <a href="http://wiki.whirled.com/Create_Games">game \
+  making tutorials</a> and our \
   <a href="http://code.threerings.net/viewvc/whirled/trunk/projects/games/">example games</a>.
-itemUploadPitch4c = - Make a Game and sell it in the <a href="#shop-4">shop</a>
 
-itemUploadTitle5 = Create your own Avatar!
-itemUploadPitch5a = - Check out the <a href="http://wiki.whirled.com/Create_Avatars">Avatar \
-  making tutorials</a>
-itemUploadPitch5b = - Buy a <a href="http://wiki.whirled.com/Remixable_avatar">remix \
-  avatar</a> and make one that''s uniquely yours!
-itemUploadPitch5c = - Make Avatars and sell them in the <a href="#shop-5">shop</a>
+getStuffBuy5 = Buy an avatar in the shop.  Choose a \
+  <a href="http://wiki.whirled.com/Remixable_avatar">remixable</a> one to make it unique.
+getStuffCreate5 = Make and upload your own \
+  <a href="http://wiki.whirled.com/Create_Avatars">avatars</a>, then sell them in the \
+  <a href="#shop-5">Shop</a> for coins!
 
-itemUploadTitle6 = Create your own Pet!
-itemUploadPitch6a = - Check out the <a href="http://wiki.whirled.com/Create_Pets">Pet \
-  making tutorials</a>
-itemUploadPitch6b = - Buy a <a href="http://wiki.whirled.com/Remixable_Items">remix \
-  pet</a> and make one that''s uniquely yours!
-itemUploadPitch6c = - Make Pets and sell them in the <a href="#shop-6">shop</a>
+getStuffBuy6 = Buy a pet in the shop.  Choose a \
+  <a href="http://wiki.whirled.com/Remixable_item">remixable</a> one to make it unique.
+getStuffCreate6 = Make and upload your own \
+  <a href="http://wiki.whirled.com/Create_Pets">pets</a>.  You can even sell them in the \
+  <a href="#shop-6">Shop</a>!
 
-itemUploadTitle7 = Upload your Music!
-itemUploadPitch7a = - Upload a Song and play it in your room
-itemUploadPitch7b = - <a href="#mail">Mail a Song</a> as a gift to a friend
-itemUploadPitch7c = - Coming soon: create playlists and put a jukebox in your room
+getStuffBuy7 = Buy music in the shop and <a href="http://wiki.whirled.com/Edit_Your_Room">add \
+  it to your room</a> to set the mood.
+getStuffCreate7 = Upload a song and and <a href="#mail">mail it as a gift</a> to a friend, \
+  or sell it in the <a href="#shop-7">Shop</a>!
 
-itemUploadTitle8 = Upload your Videos!
-itemUploadPitch8a = - Upload <a href="http://wiki.whirled.com/Uploading_Videos">FLV Videos</a>
-itemUploadPitch8b = - <a href="#mail">Mail a Video</a> as a gift to a friend
-itemUploadPitch8c =
+getStuffBuy8 = Buy videos in the shop and <a href="http://wiki.whirled.com/Edit_Your_Room">add \
+  them to your room</a>.
+getStuffCreate8 = Upload <a href="http://wiki.whirled.com/Uploading_Videos">FLV Videos</a> \
+  and <a href="#mail">mail them as gifts</a> to your friends.
 
-itemUploadTitle9 = Create your own Room Backdrop!
-itemUploadPitch9a = - Check out our tutorial on \
-  <a href="http://wiki.whirled.com/Create_Decor">making Backdrops</a>
-itemUploadPitch9b = - Take a picture of a real room and use that as your room Backdrop
-itemUploadPitch9c =
+getStuffBuy9 = Buy a new backdrop for your <a href=#world-home>home</a> from the \
+  shop, then <a href="http://wiki.whirled.com/Edit_Your_Room">get decorating</a>!
+getStuffCreate9 = Check out our tutorial on \
+  <a href="http://wiki.whirled.com/Create_backdrops">making backdrops</a> to learn how.
 
-itemUploadTitle10 = Create your own Toys!
-itemUploadPitch10a = - Check out the <a href="http://wiki.whirled.com/Create_Toys">Toy \
-  making tutorials</a>
-itemUploadPitch10b = - Make Toys and sell them in the <a href="#shop-10">shop</a>
-itemUploadPitch10c =
+getStuffBuy10 = Buy a toy and <a href="http://wiki.whirled.com/Edit_Your_Room">add it to your \
+  room</a> for your guests to play with.
+getStuffCreate10 = Check out the <a href="http://wiki.whirled.com/Create_Toys">toy \
+  making tutorials</a>, then sell your toys in the <a href="#shop-10">Shop</a>.
 
 #
 # Listing pricing modes
