--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -37,6 +37,10 @@ panelCreateNew = Upload...
 
 msgItemDeleted = Item deleted.
 
+getStuffTitle = How do I get stuff?
+getStuffShop = SHOP
+getStuffUpload = UPLOAD
+
 #
 # ItemDetailPanel
 
