Properly inherit from Underwire's GWT module. No longer need to duplicate all our style definitions. Fixed link to "Game info".

--- a/src/gwt/support.gwt.xml.in
+++ b/src/gwt/support.gwt.xml.in
@@ -1,9 +1,6 @@
 <module>
   <inherits name="page"/>
-
-  <source path="com/threerings/underwire/gwt/client"/>
-  <source path="com/threerings/underwire/web/data"/>
-  <source path="com/threerings/underwire/web/client"/>
+  <inherits name="com.threerings.underwire.Admin"/>
 
   <source path="client/support"/>
 
