Placeholder page with mockup for the deviant art contest.  URL to the contest landing page will be #landing-dacontest

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -7,11 +7,12 @@
 # Page titles
 
 titleCreators = Whirled Welcomes Creators
+titleDAContest = Design Your Whirled DeviantArt Contest
 
 #
 # Landing page messages
 
-landingTitle = Whirled - Play games, make friends, make stuff.
+landingTitle = Play games, make friends, make stuff.
 landingLogon = Logon
 landingClickToStart = Click to Start the Video!
 landingTagline = Play games.  Make friends.  Make stuff.
