A bit of style, and more importantly, instructions for the edit pages.  Instruction text is not yet final and still blank for subitems.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -13,6 +13,9 @@ errUploadError = An unrecoverable error occurred during the upload.
 #
 # ItemEditor
 
+createTitle = Create {0}
+editTitle = Edit {0}
+
 editorSave = Save
 editorNotConsistent = This item requires further configuration.
 
