--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -93,6 +93,9 @@ getStuffBuy1 = Buy an image in the shop and use it on your <a href="#people-me">
 getStuffCreate1 = Create a <a href="#people-create">gallery</a> to show off your photos and \
   artwork to the world.
   
+getStuffBuy2 = 
+getStuffCreate2 = 
+  
 getStuffBuy3 = Buy furniture and use it to \
   <a href="http://wiki.whirled.com/Edit_Your_Room">decorate a clubhouse</a> for you and your \
   friends.
@@ -137,6 +140,66 @@ getStuffBuy10 = Buy a toy and <a href="http://wiki.whirled.com/Edit_Your_Room">a
 getStuffCreate10 = Check out the <a href="http://wiki.whirled.com/Create_Toys">toy \
   making tutorials</a>, then sell your toys in the <a href="#shop-10">Shop</a>.
 
+#
+# Image Editing wiki link (top above divider)
+
+editorWikiLink1 = Learn how to create your own images on our \
+  <a href="http://wiki.whirled.com/Image">wiki</a>
+editorWikiLink2 = 
+editorWikiLink3 = Learn how to create your own furniture on our \
+  <a href="http://wiki.whirled.com/Create_Furniture">wiki</a>
+editorWikiLink4 = Learn how to create your own games on our \
+  <a href="http://wiki.whirled.com/Create_games">Whirled Wiki</a>
+editorWikiLink5 = Learn how to create your own avatars on our \
+  <a href="http://wiki.whirled.com/Create_avatars">wiki</a>.
+editorWikiLink6 = Learn how to create your own pets on our \
+  <a href="http://wiki.whirled.com/Create_pets">wiki</a> 
+editorWikiLink7 = Learn how to upload music on our \
+  <a href="http://wiki.whirled.com/Music">wiki</a> 
+editorWikiLink8 = Learn how to upload videos on our \
+  <a href="http://wiki.whirled.com/Uploading_Videos">wiki</a> 
+editorWikiLink9 = Learn how to create your own backdrops on our \
+  <a href="http://wiki.whirled.com/Create_backdrops">wiki</a> 
+editorWikiLink10 = Learn how to create your own toys on our \
+  <a href="http://wiki.whirled.com/Create_toys">wiki</a> 
+editorWikiLink11 = 
+editorWikiLink12 = 
+editorWikiLink13 = 
+editorWikiLink14 = 
+editorWikiLink15 = 
+
+#
+# Image Editing blurb (top below divider)
+
+editorBlurb1 = Images must be GIF, PNG or JPG format.  You can add then to \
+  <a href="#world-home">your room</a> like furniture, or create a \
+  <a href="#people-create">Gallery</a> to display them. 
+editorBlurb2 = 
+editorBlurb3 = Furniture can either an image or a SWF file. If your furniture is interactive \
+  instead of just animated, you should consider uploading it as a toy.
+editorBlurb4 = Whirled games are developed in ActionScript 3 (AS3) either using the \
+  standalone compiler or the Flash 9 Authoring Tool. Integrate your game with Whirled by \
+  following the <a href="http://wiki.whirled.com/Create_games">wiki</a>.
+editorBlurb5 = Avatars can only be SWF files. If you want to upload a static image as your \
+  avatar, we suggest you look at the <a href="#shop-l_5_1609">easy image avatar</a> It''s free \
+  and you can remix it with your static image.
+editorBlurb6 = Pets are animated characters that wander rooms, change moods, and \
+  interact with players. Pets can only be SWF files. If you want to upload an image as your \
+  pet, buy a free <a href="#shop-l_6_404">easy image pet</a> instead.
+editorBlurb7 = Music and sound effects can be added to <a href="#world-home">your room</a>, \
+  and must be MP3 format.
+editorBlurb8 = Videos must be in FLV, MPEG, WMV, or Quicktime format.
+editorBlurb9 = Backdrops can be images (GIF, PNG, or JPG format images) or Flash SWF files.  \
+  For animation, use SWF format as GIFs won''t be animated inside of rooms.
+editorBlurb10 = Toys in whirled are interactive, so they can only be SWF files.  If your want \
+  to create a picture of a toy that doesn''t move, create <a href="#stuff-c_3">Furniture</a> \
+  instead.
+editorBlurb11 = 
+editorBlurb12 = 
+editorBlurb13 = 
+editorBlurb14 = 
+editorBlurb15 = 
+  
 #
 # Listing pricing modes
 
