A bit more streamlining of the upload photo UI. Show the main image and the description on the first tab and leave the preview and thumbnail image on the extras tab because they can safely be ignored.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -24,7 +24,7 @@ editorInfoTab = Item Info
 editorFurniTab = Furniture Media
 editorFurniTitle = Image shown when Item is placed in the World as Furniture
 editorPhotoFurniTab = Preview Media
-editorPhotoFurniTitle = Image shown as a preview on Gallery pages
+editorPhotoFurniTitle = You can customize the preview shown on Gallery pages
 
 editorThumbTab = Thumbnail Media
 editorThumbTitle = Small image shown in My Stuff and the Shop
@@ -131,7 +131,10 @@ errPetNotFlash = Pet media must be flash (SWF) files. If you''d like to use \
 # PhotoEditor
 
 photoLabel = Image Media
-photoTip = Main Image
+photoTip = Full image shown in galleries and in your room
+
+photoTabMain = Main
+photoTabExtras = Extras
 
 errPhotoNotImage = Images must be a GIF, PNG or JPG.
 
