Let's do the same for all of our bulk media.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -19,7 +19,8 @@ editTitle = Edit {0}
 editorSave = Save
 editorNotConsistent = This item requires further configuration.
 
-editorInfoTab = Item Info
+editorTabMain = Main
+editorTabExtras = Extras
 
 editorFurniTab = Furniture Media
 editorFurniTitle = Image shown when Item is placed in the World as Furniture
@@ -132,9 +133,6 @@ errPetNotFlash = Pet media must be flash (SWF) files. If you''d like to use \
 
 photoLabel = Image Media
 photoTip = Full image shown in galleries and in your room
-
-photoTabMain = Main
-photoTabExtras = Extras
 
 errPhotoNotImage = Images must be a GIF, PNG or JPG.
 
