New FAQ on the help page; text not yet finalized.

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -19,35 +19,110 @@ helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> \
   provides tutorials and additional information for people who want to learn how to \
   create avatars, pets, toys and games for Whirled.
 
-helpQuestionsTitle = Asking Questions
-helpQuestionsIntro = Read our <b>FAQ</b> below to learn about Whirled quickly.  If you have \
-  questions you don''t see answered here, check out the \
+helpQuestionsTitle = Frequently Asked Questions
+helpQuestionsIntro = If you have questions you don''t see answered here, check out the \
   <a href="http://wiki.whirled.com/Frequently_asked_questions">Whirled Wiki FAQ</a> \
   or the <a href="#whirleds-f_19">Brave New Whirled</a> message boards to ask \
   a specific question and someone will help you out!
 helpQuestions = <h3>What is Whirled?</h3> <ul> \
-  <li>Whirled is a web-based social network combined with a virtual world, in which you, \
-  the player, can contribute and sell new avatars, room backdrops, music, pets and games.</li> \
-  <li>Each player has a room of their own to decorate and hang out chatting with friends. \
-  You can build out additional rooms.  Most web content can be embedded in your room, \
-  including video and music.</li> \
-  <li>Find and invite friends to Whirled to play games, chat, or throw parties.</li> \
-  <li><i>Whirleds</i> allow collaboration with other players around shared interests, \
-  with a shared group space and message boards.</li> \
+  <li>Whirled is a place where you can design your own <a href="#world-home">rooms</a>, meet \
+  people and play <a href="#games">games</a>. \
+  Everything in Whirled is created by the people who play it: the places, games, avatars, \
+  toys, and pets, so Whirled is whatever <i>you</i> want it to be.</li> \
+  <li><i>Whirleds</i> in Whirled are clubs for people with a shared interest to hang out and \
+  chat.  You can <a href="#whirleds">find one</a> now, \
+  or <a href="#whirleds-edit">create your own</a> and invite your friends to join.  Every game \
+  has it''s own Whirled where you can discuss the game or find people to play with.</li> \
   </ul> \
-  <h3>How much does it cost?</h3> <ul> \
-  <li>Whirled is <b>FREE</b> to play!  Content is purchased with coins.</li> \
+  <h3>How do I find friends?</h3> <ul> \
+  <li>To invite your friends to play on Whirled, follow the instructions on the \
+  <a href="#people-invites">invite</a> page.  If your friends are online, they will appear under \
+  the <a href="#me">Me</a> tab with a link so you can jump right to them.  To find people or see \
+  a list of your friends, look under <a href="#people">Friends</a> on the Me tab.  See \
+  <a href="http://wiki.whirled.com/Friends">the wiki</a> for more help.</li> \
   </ul> \
-  <h3>How do I get more coins?</h3> <ul> \
-  <li>There are lots of different ways to get coins: play games, invite friends, set up \
-  your profile, or upload and sell your own creations in the catalog.  \
-  (More ways to get coins coming soon!)</li> \
+  <h3>How do I change what I look like?</h3> <ul> \
+  <li>To change how you appear when you''re in a room (we call this your \
+  <a href="http://wiki.whirled.com/Avatar">avatar</a>), go to the <a href="#shop-5">avatar \
+  Shop</a> and buy yourself a new avatar.  Then go into a <a href="#world-home">room</a>, \
+  click on yourself and pick a new avatar from the Change avatar list.</li> \
+  <li>To change the image that appears when you post a comment or send mail to other people, go \
+  to <a href="#people-me">your profile</a> by clicking on your name at the top, then click \
+  Edit Profile and pick a new Photo.</li> \
   </ul> \
-  <h3>How do I find my friends?</h3> <ul> \
-  <li>Click on the Friends tab to view any friends you''ve already made on Whirled. \
-  No friends yet?  On the same page you are able to do a people search by real name, \
-  Whirled name, or e-mail address.  The next step is to \
-  <a href="#people-invites">invite</a> all your other friends to Whirled.</li> \
+  <h3>What does remixable mean?</h3> <ul> \
+  <li><a href="http://wiki.whirled.com/Remixable_item">Remixable items</a> are ones that you \
+  can customize with your own images or settings after you buy them.  For example the \
+  <a href="#shop-l_5_1609">Easy Image Avatar</a> lets you make an avatar using your own image \
+  that bounces when you walk.</li> \
+  </ul> \
+  <h3>How do coins and bars work?</h3> <ul> \
+  <li>You can buy things in the <a href="#shop">Shop</a> using either \
+  <a href="http://wiki.whirled.com/Currency#Coins">coins</a> or \
+  <a href="http://wiki.whirled.com/Currency#Bars">bars</a>.  You can earn coins by playing games, \
+  <a href="#people-invites">inviting friends</a>, earning <a href="#me-passport">badges</a> or \
+  selling your creations in the <a href="#shop">Shop</a>.  You can \
+  <a href="https://billing.whirled.com/billing/login/">buy bars</a> for real dollars or earn \
+  them by selling items in the Shop.</li>  \
+  <li>Everything has both a coin price and a bar price, and the ratio between them is the same \
+  for all shop items, so it''s your choice which one you want to pay with.  You can''t exchange \
+  coins for bars.</li> \
+  </ul> \
+  <h3>How do I decorate my room?</h3> <ul> \
+  <li>Click on the house icon under the <a href="#me">Me</a> tab to head to \
+  <a href="#world-home">your home</a>.  Then click the hammer and wrench icon at the bottom \
+  right of the screen to go into edit mode, where you can drag furniture around and rotate or \
+  flip it.</li> \
+  <li>You can add new furniture, backdrops, toys, pets, games, images, music or videos \
+  to your room by buying it in the <a href="#shop">Shop</a>.  Then go to edit your room and \
+  click Add Item, find the item you want to add and \
+  click the Add to room link.  Next click the small X button on the right side of the blue \
+  My Furniture bar to return to your room and arrange your new item.</li> \
+  </ul> \
+  <h3>How do I create a new room?</h3> <ul> \
+  <li>Every player starts with a <a href="#world-home">home</a> room which you can get to by \
+  clicking the Home icon under the <a href="#me">Me</a> tab.  To create a new room, first add \
+  a door to your home, then select it and in the Arranging Room menu click Make Door.  Next \
+  click on Purchase a new room, then click on your new door to go to it.  </li> \
+  <li>To add a room to a Whirled, you need to go to a Whirled that you manage and click \
+  Manage Rooms, then give one of your extra rooms to the Whirled (you can''t get it back!)</li> \
+  </ul> \
+  <h3>How do pets work?</h3> <ul> \
+  <li>When you buy a <a href="http://wiki.whirled.com/Pet">pet</a>, you can add it to a room \
+  the same way you add furniture, but pets \
+  are a little different.  When you add a pet it will start to follow you from room to room \
+  wherever you go, until you click on your pet and order it to Stay.  If you send your pet to \
+  Sleep it will go back into your Stuff until you add it to a room again.  You can only have \
+  one pet following you at a time.</li> \
+  <li>You can rename your pet by looking at it''s details from your <a href="#stuff">Stuff</a> \
+  and clicking the Rename button.</li> \
+  </ul> \
+  <h3>How do I make things?</h3> <ul> \
+  <li>If you want to use your own image to make a unique \
+  <a href="http://wiki.whirled.com/Create_avatars">avatar</a> or \
+  <a href="http://wiki.whirled.com/Create_pets">pet</a>, you should get a \
+  <a href="http://wiki.whirled.com/Remixable_item">remixable</a> one and remix it to use your \
+  image.</li> \
+  <li>If you want to make <a href="http://wiki.whirled.com/Create_furniture">furniture</a> or \
+  a <a href="http://wiki.whirled.com/Create_backdrops">backdrop</a>, go to the right section \
+  of your <a href="#stuff">Stuff</a>, and click on Upload at the bottom right then follow \
+  the instructions.</li> \
+  <li>If you want to make interactive avatars, pets, \
+  <a href="http://wiki.whirled.com/Create_toys">toys</a> or \
+  <a href="http://wiki.whirled.com/Create_games">games</a>, you should start by reading the \
+  <a href="http://wiki.whirled.com/Category:Tutorials">tutorials</a> in our Wiki.  Interactive \
+  items are made using Adobe ActionScript and Flash.</li> \
+  </ul> \
+  <h3>How do I sell stuff?</h3> <ul> \
+  <li>You can only <a href="http://wiki.whirled.com/Testing_and_selling">sell</a> things that \
+  you have uploaded and made yourself.  Once you have made something, look at it''s details in \
+  your <a href="#stuff-6">Stuff</a> and click the List Item link.  There are different \
+  <a href="http://wiki.whirled.com/Pricing_strategy">pricing strategies</a> you can use, and \
+  you can choose to be paid 30% of each sale in either in Coins or \
+  <a href="http://wiki.whirled.com/Bars#Bling">Bling</a> which can be traded for Bars or <i>real \
+  money</i>.</li> \
+  <li>Once your item is listed in the <a href="#shop">Shop</a>, you can look at it to \
+  see how many people have rated it, bought it, or commented on it.</li> \
   </ul>
 
 helpTechTitle = Technical Info
