Rearrange wording on "what is whirled" to match our tagline.

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -25,8 +25,8 @@ helpQuestionsIntro = If you have questions you don''t see answered here, check o
   or the <a href="#whirleds-f_19">Brave New Whirled</a> message boards to ask \
   a specific question and someone will help you out!
 helpQuestions = <h3>What is Whirled?</h3> <ul> \
-  <li>Whirled is a place where you can design your own <a href="#world-home">rooms</a>, meet \
-  people and play <a href="#games">games</a>. \
+  <li>Whirled is a place where you can play <a href="#games">games</a>, make \
+  <a href="#people">friends</a> and design your own <a href="#world-home">rooms</a>. \
   Everything in Whirled is created by the people who play it: the places, games, avatars, \
   toys, and pets, so Whirled is whatever <i>you</i> want it to be.</li> \
   <li><i>Whirleds</i> in Whirled are clubs for people with a shared interest to hang out and \
