Link to shop in wiki under "how do coins and bars work"

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -57,7 +57,7 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   that bounces when you walk.</li> \
   </ul> \
   <h3>How do coins and bars work?</h3> <ul> \
-  <li>You can buy things in the <a href="#shop">Shop</a> using either \
+  <li>You can buy things in the <a href="http://wiki.whirled.com/Shop">Shop</a> using either \
   <a href="http://wiki.whirled.com/Currency#Coins">coins</a> or \
   <a href="http://wiki.whirled.com/Currency#Bars">bars</a>.  You can earn coins by playing games, \
   <a href="#people-invites">inviting friends</a>, earning <a href="#me-passport">badges</a> or \
@@ -118,7 +118,7 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   you have uploaded and made yourself.  Once you have made something, look at it''s details in \
   your <a href="#stuff-6">Stuff</a> and click the List Item link.  There are different \
   <a href="http://wiki.whirled.com/Pricing_strategy">pricing strategies</a> you can use, and \
-  you can choose to be paid 30% of each sale in either in Coins or \
+  you can choose to be paid a percentage of each sale in either in Coins or \
   <a href="http://wiki.whirled.com/Bars#Bling">Bling</a> which can be traded for Bars or <i>real \
   money</i>.</li> \
   <li>Once your item is listed in the <a href="#shop">Shop</a>, you can look at it to \
