--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -176,7 +176,7 @@ blingCashOutDescription = Cash out some or all of your bling by specifying the a
 	"Cash Out".  It may take 3-5 business days to process your request.  Cash out requests are \
 	fulfilled to a particular PayPal account; please make sure you provide the correct PayPal \
 	email address below.
-blingCashOutAmount = Amount to cash out:
+blingCashOutAmount = Bling amount to cash out:
 blingCashOutButton = Cash Out
 cashOutRequestSuccessful = Your request to cash out your bling has been submitted.
 cashedOutBling = Cash out request of {0} bling for {1} currently pending.
