Small changes to help faq text.

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -32,7 +32,9 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li><i>Whirleds</i> in Whirled are clubs for people with a shared interest to hang out and \
   chat.  You can <a href="#whirleds">find one</a> now, \
   or <a href="#whirleds-edit">create your own</a> and invite your friends to join.  Every game \
-  has it''s own Whirled where you can discuss the game or find people to play with.</li> \
+  has it''s own Whirled where you can discuss the game or find people to play with.  Read \
+  more about Whirleds on our wiki <a href="http://wiki.whirled.com/Whirleds_tab">here</a> \
+  and <a href="http://wiki.whirled.com/Whirleds">here</a>.</li> \
   </ul> \
   <h3>How do I find friends?</h3> <ul> \
   <li>To invite your friends to play on Whirled, follow the instructions on the \
@@ -60,7 +62,7 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li>You can buy things in the <a href="http://wiki.whirled.com/Shop">Shop</a> using either \
   <a href="http://wiki.whirled.com/Currency#Coins">coins</a> or \
   <a href="http://wiki.whirled.com/Currency#Bars">bars</a>.  You can earn coins by playing games, \
-  <a href="#people-invites">inviting friends</a>, earning <a href="#me-passport">badges</a> or \
+  <a href="#people-invites">inviting friends</a>, completing <a href="#me-passport">stamps</a> or \
   selling your creations in the <a href="#shop">Shop</a>.  You can \
   <a href="https://billing.whirled.com/billing/login/">buy bars</a> for real dollars or earn \
   them by selling items in the Shop.</li>  \
@@ -85,7 +87,9 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   a door to your home, then select it and in the Arranging Room menu click Make Door.  Next \
   click on Purchase a new room, then click on your new door to go to it.  </li> \
   <li>To add a room to a Whirled, you need to go to a Whirled that you manage and click \
-  Manage Rooms, then give one of your extra rooms to the Whirled (you can''t get it back!)</li> \
+  Manage Rooms, then give one of your extra rooms to the Whirled (you can''t get it back!). \
+  Read more about Whirleds on our wiki <a href="http://wiki.whirled.com/Whirleds_tab">here</a> \
+  and <a href="http://wiki.whirled.com/Whirleds">here</a>.</li> \
   </ul> \
   <h3>How do pets work?</h3> <ul> \
   <li>When you buy a <a href="http://wiki.whirled.com/Pet">pet</a>, you can add it to a room \
