Update wiki and technical info sections of the help page

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -15,9 +15,9 @@ helpIntro = <h2>Thank you</h2> for helping us test out Whirled! It is still a wo
   <a href="#whirleds-f_72">bug reports</a> and <a href="#whirleds-f_19">feedback</a>.
 
 helpWikiTitle = Whirled Wiki
-helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> \
-  provides tutorials and additional information for people who want to learn how to \
-  create avatars, pets, toys and games for Whirled.
+helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> is your source for \
+  more information about Whirled, including tutorials for people who want to learn how to \
+  create avatars, pets, toys and games.
 
 helpQuestionsTitle = Frequently Asked Questions
 helpQuestionsIntro = If you have questions you don''t see answered here, check out the \
@@ -130,9 +130,8 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   </ul>
 
 helpTechTitle = Technical Info
-helpTech = Whirled runs best in Mozilla Firefox, but should work in Internet Explorer \
-  and Safari as well.  For optimum performance in Firefox, try using the \
-  <a href="http://www.mozilla.com/en-US/firefox/all-beta.html">Firefox 3 beta</a>. \
+helpTech = Whirled runs best in Mozilla Firefox, but should work in Internet Explorer 7 \
+  as well.  For optimum performance, try using <a href="http://getfirefox.com">Firefox 3</a>. \
   If you''re not seeing rooms or avatars, you probably need to \
   download the latest version of Flash from Adobe. \
   <p align="center"><a href="http://www.adobe.com/go/getflashplayer">\
@@ -146,14 +145,6 @@ helpRules = By using Whirled, you agree to \
   and Community Standards</a> that must be obeyed, and if you think someone has broken \
   these rules, <a href="http://wiki.whirled.com/Report">there \
   are several ways to report them</a> to the Whirled Agents.
-
-Whirled runs best in Mozilla Firefox, but should work in Internet Explorer \
-  and Safari as well.  For optimum performance in Firefox, try using the \
-  <a href="http://www.mozilla.com/en-US/firefox/all-beta.html">Firefox 3 beta</a>. \
-  If you''re not seeing rooms or avatars, you probably need to \
-  download the latest version of Flash from Adobe. \
-  <p align="center"><a href="http://www.adobe.com/go/getflashplayer">\
-  <img src="/images/help/getflash.png" border="0"></a></p>
   
 helpTeamTitle = Whirled Team
 helpTeamEngineers = <h3>Engineering</h3>
