Minor updates to item editor text.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -23,7 +23,7 @@ editorTabMain = Main
 editorTabExtras = Extras
 
 editorFurniTab = Furniture Media
-editorFurniTitle = Image shown when Item is placed in the World as Furniture
+editorFurniTitle = Image shown when Item is placed in rooms as Furniture
 editorPhotoFurniTab = Preview Media
 editorPhotoFurniTitle = You can customize the preview shown on Gallery pages
 
@@ -53,7 +53,7 @@ errAudioNotAudio = Audio data must be an MP3 file.
 # AvatarEditor
 
 avatarLabel = Avatar Media
-avatarTip = Avatar as seen in the World
+avatarTip = Avatar as seen in rooms
 
 errAvatarNotFlash = Avatar media must be flash (SWF) files. If you''d like to use \
   a regular image, please use the Easy Image Avatar, and remix it with your image. \
@@ -122,7 +122,7 @@ errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x
 # PetEditor
 
 petLabel = Pet Media
-petTip = Pet as seen in the World
+petTip = Pet as seen in rooms
 
 errPetNotFlash = Pet media must be flash (SWF) files. If you''d like to use \
   a regular image, please use the Easy Image Pet, and remix it with your image. \
@@ -231,6 +231,6 @@ prizeTargetIdTip = Navigate in the Shop to the item you want to award and the UR
 # PropEditor
 
 propLabel = Prop Media
-propTip = Prop as seen in the World
+propTip = Prop as seen in rooms
 
 errPropNotFlash = Props must be a web-viewable image type.
