--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -173,7 +173,7 @@ editorWikiLink15 =
 
 editorBlurb1 = Images must be GIF, PNG or JPG format.  You can add then to \
   <a href="#world-home">your room</a> like furniture, or create a \
-  <a href="#people-create">Gallery</a> to display them. 
+  <a href="#people-create">Gallery</a> to display them.  Animated GIFs don''t work inside rooms.
 editorBlurb2 = 
 editorBlurb3 = Furniture can either an image or a SWF file. If your furniture is interactive \
   instead of just animated, you should consider uploading it as a toy.
@@ -181,17 +181,17 @@ editorBlurb4 = Whirled games are developed in ActionScript 3 (AS3) either using 
   standalone compiler or the Flash 9 Authoring Tool. Integrate your game with Whirled by \
   following the <a href="http://wiki.whirled.com/Create_games">wiki</a>.
 editorBlurb5 = Avatars can only be SWF files. If you want to upload a static image as your \
-  avatar, we suggest you look at the <a href="#shop-l_5_1609">easy image avatar</a> It''s free \
+  avatar, we suggest you look at the <a href="#shop-l_5_1609">easy image avatar</a>. It''s free \
   and you can remix it with your static image.
 editorBlurb6 = Pets are animated characters that wander rooms, change moods, and \
-  interact with players. Pets can only be SWF files. If you want to upload an image as your \
-  pet, buy a free <a href="#shop-l_6_404">easy image pet</a> instead.
+  interact with players. Pets can only be SWF files. If you want to upload a static image as \
+  your pet, buy a free <a href="#shop-l_6_404">easy image pet</a> instead.
 editorBlurb7 = Music and sound effects can be added to <a href="#world-home">your room</a>, \
   and must be MP3 format.
-editorBlurb8 = Videos must be in FLV, MPEG, WMV, or Quicktime format.
+editorBlurb8 = Videos must be in FLV, MPEG, WMV, or QuickTime format.
 editorBlurb9 = Backdrops can be images (GIF, PNG, or JPG format images) or Flash SWF files.  \
   For animation, use SWF format as GIFs won''t be animated inside of rooms.
-editorBlurb10 = Toys in whirled are interactive, so they can only be SWF files.  If your want \
+editorBlurb10 = Toys in Whirled are interactive, so they can only be SWF files.  If you want \
   to create a picture of a toy that doesn''t move, create <a href="#stuff-c_3">Furniture</a> \
   instead.
 editorBlurb11 = 
