--- a/build.xml
+++ b/build.xml
@@ -655,6 +655,18 @@
     <copy file="${deploy.dir}/MediaStub.swf" todir="pages/media"/>
   </target>
 
+  <target name="embedstub">
+    <exec executable="${basedir}/bin/mxmlc" failonerror="true">
+      <arg value="-load-config"/>
+      <arg value="etc/msoy-config.xml"/>
+      <arg value="-compiler.source-path=${asrc.dir}/"/>
+      <arg value="-output"/>
+      <arg value="${deploy.dir}/embedstub-base.swf"/>
+      <arg value="-file-specs"/>
+      <arg value="${asrc.dir}/EmbedStub.as"/>
+    </exec>
+  </target>
+
   <target name="remixer" depends="asprepare">
     <antcall target="ascompile"><param name="astype" value="remixer"/></antcall>
   </target>
@@ -974,7 +986,7 @@
   <!-- TODO: the tutorial target has been removed from flashapps until it compiles again after a
        the API shuffle is done, and the tutorial code has been refactored -->
   <!-- builds top-level flash applications. -->
-  <target name="flashapps" depends="asprepare,mediastub,videoviewer,remixer"
+  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoviewer,remixer"
           description="Rebuilds all of our Flash clients and applets.">
     <antcall target="ascompile"><param name="astype" value="world"/></antcall>
     <antcall target="ascompile"><param name="astype" value="game"/></antcall>
