- Added the user facing portion of underwire to allow user petitions under the "Contact Us" section on the "Help" page - Created a custom contact panel that only has the petition forms (not the FAQ section in the generic underwire user page) - Created a custon petition submision form that works for both logged in users and anonymous users - Detect and mark complaints against Guests (not that the support personel can really do anything about it) - Send whirled mail to users when support personel add a message to a petition

--- a/src/gwt/client/support/SupportMessages.properties
+++ b/src/gwt/client/support/SupportMessages.properties
@@ -12,3 +12,25 @@ lackPrivileges = Your account does not have the necessary privileges to view \
 
 supportTitle = Customer Support
 faqTitle = Frequently Asked Questions
+contactTitle = Contact Us
+permaName = Permaname:
+optional = (optional)
+supportArea = Support Area
+
+newPetitionHelp = our Support Request will be sent to our Support Team and you will receive a \
+  whirled email when they have responded. Please be sure that the email address you have on \
+  file is current, or we will not be able to reply to you.
+newAnonymousPetitionHelp = Your Support Request will be sent to our Support Team and you \
+  will receive an email when they have responded.  If this request concerns a specific \
+  account, please logon to that account, if possible, before filling out the request.
+
+saTech = Technical Difficulties
+saBan = Banned Accounts
+saBill = Billing
+saOther = Other
+
+submitSuccessTitle = Support Request Submitted
+submitSuccessMsg = Your Support Request has been submitted to our Support Team.  You will \
+  receive a mail notification when the request has been updated.
+
+errMissingEmail = Please enter a valid e-mail address
