Your support request, not ours.

--- a/src/gwt/client/support/SupportMessages.properties
+++ b/src/gwt/client/support/SupportMessages.properties
@@ -17,7 +17,7 @@ permaName = Permaname:
 optional = (optional)
 supportArea = Support Area
 
-newPetitionHelp = our Support Request will be sent to our Support Team and you will receive a \
+newPetitionHelp = Your Support Request will be sent to our Support Team and you will receive a \
   whirled email when they have responded. Please be sure that the email address you have on \
   file is current, or we will not be able to reply to you.
 newAnonymousPetitionHelp = Your Support Request will be sent to our Support Team and you \
