I think this'll get us rolling with the new meta-policy stuff. We may want to change this to not allow any file to be a policy file, there could potentially be problems if users do sneaky things with media files...

--- a/pages/crossdomain.xml.in
+++ b/pages/crossdomain.xml.in
@@ -1,4 +1,5 @@
 <cross-domain-policy>
+   <site-control permitted-cross-domain-policies="all"/>
    <allow-access-from domain="@SERVER_URL_HOST@" to-ports="*"/>
    <allow-access-from domain="first.whirled.com" to-ports="*"/>
    <allow-access-from domain="*.kongregate.com" to-ports="*"/>
